tests/data/hsts/mergeable-tls/hsts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hsts-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"

    nginx.org/mergeable-ingress-type: "master"
    nginx.org/hsts: "True"
spec:
  tls:
    - hosts:
        - hsts.example.com
      secretName: tls-secret
  rules:
  - host: hsts.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hsts-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: hsts.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hsts-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: hsts.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
